--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "notiflix": "^2.7.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-full-calendar": "^2.8.1-0",
+    "vue-fullcalendar": "^1.0.9",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
